docker-kubernetes/mastering-kubernetes/ch10-networking/social_graph/social-graph-manager.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social-graph-manager
  labels:
    svc: social-graph
    app: manager
spec:
  replicas: 1
  selector:
    matchLabels:
      svc: social-graph
      app: manager
  template:
    metadata:
      labels:
        svc: social-graph
        app: manager
    spec:
      containers:
        - name: social-graph-manager
          image: g1g1/delinkcious-social-graph:0.3
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
          resources:
            requests:
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: social-graph-manager
spec:
  ports:
    - port: 9090
  selector:
    svc: social-graph
    app: manager
