docker-kubernetes/mastering-kubernetes/ch10-networking/social_graph/ingress-resource.yml
---
#
#
# example of an ingress resource that manages traffic into two services.
# The rules map the externally visible http://foo.bar.com/foo to the s1
# service, and http://foo.bar.com/bar to the s2 service:
#
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test

spec:
  ingressClassName: cool-ingress
  rules:
    - host: foo.bar.com
      http:
        paths:
          - path: /foo
            backend:
            service:
              name: s1
              port: 80
          - path: /bar
            backend:
            service:
              name: s2
              port: 80
